# pict.hs

./: .gitignore  LICENSE  default.nix  flake.nix  neu  pict.cabal  pict.nix  runcommand  shell.nix  stack.yaml
src/: Pict.hs  main.hs  pict.hs
