name:                pict
version:             0.1.0.0
synopsis:            haskell implementation of pict JPEG copy
description:         Please see README.md
homepage:            https://github.com/LATBauerdick/pict.hs#readme
license:             BSD3
license-file:        LICENSE
author:              LATBauerdick
maintainer:          github@bauerdick.org
copyright:           Copyright: (c) 2016 LATBauerdick
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pict
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Pict
  build-depends:       base
                     , directory
                     , filepath
                     , time
                     , process
                     , parallel
  default-language:    Haskell2010

test-suite pict-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pict
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LATBauerdick/pict.hs
